finished user register and login endpoints
