# Grocery App Node js/routes/app.routes.js
@@ -1,5 +1,6 @@
 const categoryController = require("../controllers/categories.controller");
 const productController = require("../controllers/products.controller");
+const userController = require("../controllers/users.controller");
 const express = require("express");
 const router = express.Router();
 
@@ -15,5 +16,8 @@ router.get("/product/:id", productController.findOne);
 router.put("/product/:id", productController.update);
 router.delete("/product/:id", productController.delete);
 
+
+router.post("/register",userController.register);
+router.post("/login",userController.login);
 
 module.exports = router;
