# Grocery App Node js/swagger.json
@@ -15,8 +15,13 @@
         {
             "name": "Category",
             "description": "Category API"
+        },
+        {
+            "name": "Users",
+            "description": "Users API"
         }
     ],
+    
     "schemes": [
         "http"
     ],
@@ -27,6 +32,54 @@
         "application/json"
     ],
     "paths": {
+        "/api/register":{
+            "post":{
+                "tags":["Users"],
+                "summary":"Register API",
+                "parameters":[
+                    {
+                        "name":"RegisterModel",
+                        "in":"body",
+                        "description":"User Registration",
+                        "required":true,
+                        "type":"object",
+                        "schema":{
+                            "$ref":"#/definitions/RegisterModel"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "$ref":"#/definitions/ServiceResponse" 
+                    }
+                }
+            }
+
+        },
+        "/api/login":{
+            "post":{
+                "tags":["Users"],
+                "summary":"Login API",
+                "parameters":[
+                    {
+                        "name":"LoginModel",
+                        "in":"body",
+                        "description":"User Login Api",
+                        "required":true,
+                        "type":"object",
+                        "schema":{
+                            "$ref":"#/definitions/LoginModel"
+                        }
+                    }
+                ],
+                "responses":{
+                    "200":{
+                        "$ref":"#/definitions/ServiceResponse" 
+                    }
+                }
+            }
+
+        },
         "/api/category": {
             "get": {
                 "tags": [
@@ -214,6 +267,40 @@
                     "items": {
                         "$ref": "#/definitions/Product"
                     }
+                }
+            }
+        },
+        "RegisterModel":{
+            "required":[
+                "fullName",
+                "email",
+                "password"
+            ],
+            "properties":{
+                "fullName":{
+                    "type":"string"
+                },
+                "email":{
+                    "type":"string"
+                },
+                "password":{
+                    "type":"string"
+                }
+            }
+        },
+        "LoginModel":{
+            "required":[
+               
+                "email",
+                "password"
+            ],
+            "properties":{
+                
+                "email":{
+                    "type":"string"
+                },
+                "password":{
+                    "type":"string"
                 }
             }
         }
